# Winderust

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_GUIDE.md  PROCESS_LASSO_GAP_PLAN.md  PROJECT_SCOPE.md  README.md  SECURITY.md  agent.md  article.md  build.rs  library.md  plan.md  process-lasso-parity.md  real_power_saving_mode_plan.md  test-plan.md
.agents/memory/: 00-agent-start.md  10-development-guide.md  15-design-spec.md  20-project-scope.md  30-reference-library.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
benchmark/: README.md  amd-ryzen-7-7735hs.md  intel-core-5-210h-adaptive-runtime.md  intel-core-5-210h.md
benchmark/results/: intel-core-5-210h-adaptive-runtime-20260715-154124.json  intel-core-5-210h-adaptive-runtime-20260715-155031.json  intel-core-5-210h-adaptive-runtime-20260715-160158.json
docs/: adaptive-engine-benchmark.md  adaptive-engine-implementation.md  auto-balance-benchmark.md  real-power-saving-mode-plan.md  release-checklist.md  workload-engine-benchmark.md
image/: icon-design.pdn
locales/: en.yml  zh-TW.yml
scripts/: adaptive_runtime_benchmark.ps1  auto_balance_benchmark.ps1  build_release.cmd  build_release.ps1  power_drain_benchmark.ps1  workload_engine_benchmark.ps1
src/: action_log.rs  activity.rs  app.rs  assets.rs  automation.rs  backend.rs  background_cpu.rs  config.rs  cpu.rs  cpu_priority.rs  dashboard_metrics.rs  features.rs  file_dialog.rs  foreground.rs  gpu_priority.rs  io_priority.rs  launch_priority.rs  main.rs  memory_priority.rs  memory_trim.rs  power.rs  priority_boost.rs  privilege.rs  process_priority.rs  rules.rs  self_power.rs  smart_trim.rs  startup.rs  thread_priority.rs  timer_resolution.rs  tray.rs  ui.rs  win_registry.rs  win_util.rs  windows_events.rs  workload_engine.rs
src/activity/: controller.rs  idle_detector.rs  input_hook.rs  input_tracker.rs  mod.rs
src/affinity/: mod.rs
src/backend/: audio_activity.rs  automation.rs  dashboard_metrics.rs  file_dialog.rs  power_source.rs  privilege.rs  process_icon.rs  self_power.rs  startup.rs  tray.rs  update_checker.rs  win_registry.rs  win_util.rs  windows_events.rs
src/backend/automation/: requirements.rs  runner.rs  status.rs  tests.rs  wake.rs
src/config/: mod.rs  settings.rs  storage.rs
src/cpu/: mod.rs
src/cpu_limiter/: mod.rs
src/ecoqos/: mod.rs
src/features/: advanced_controls.rs  cpu_control.rs  power_plan_control.rs  priority_control.rs  winderust_features.rs  workload_engine.rs
src/features/advanced_controls/: app_suspension.rs  timer_resolution.rs
src/features/advanced_controls/app_suspension/: process_freezer.rs  wake_activity.rs
src/features/cpu_control/: background_cpu_restriction.rs  core_limiter.rs  core_steering.rs
src/features/cpu_limiter/: mod.rs
src/features/performance_mode/: mod.rs
src/features/power_plan_control/: by_cpu_load.rs  by_running_app.rs  by_time.rs
src/features/priority_control/: dynamic_priority_boost.rs  gpu_priority.rs  io_priority.rs  memory_priority.rs  process_priority.rs  thread_priority.rs
src/features/winderust_features/: background_efficiency.rs  memory_trim.rs  workload_engine.rs
src/features/winderust_features/workload_engine/: policy.rs  (+2 more)
src/foreground/: active_window.rs  mod.rs  process_list.rs
src/performance_mode/: mod.rs
src/power/: mod.rs  plan.rs  powercfg.rs
src/responsiveness/: mod.rs
src/rules/: action_executor.rs  app_resource_adapter.rs  decision_engine.rs  engine.rs  execution_failure.rs  mod.rs  model.rs  power_plan_adapter.rs  resolver.rs  restore.rs
src/scheduler/: by_cpu_load.rs  cpu_usage_rule.rs  mod.rs  schedule_rule.rs
src/suspension/: mod.rs
src/ui/: about_page.rs  app.rs  assets.rs  cpu_usage_page.rs  dashboard.rs  efficiency_page.rs  mod.rs  power_plan_page.rs  rules_page.rs  schedule_page.rs  suspension_page.rs
src/ui/app/: about_page.rs  action_log_page.rs  adaptive_engine_page.rs  advanced_controls_pages.rs  advanced_power_plan_tuning_page.rs  app_suspension_page.rs  appearance.rs  background_efficiency_page.rs  chrome.rs  common_render.rs  control_components.rs  control_state.rs  cpu_control_pages.rs  dropdowns.rs  formatting.rs  indicators.rs  list_removal.rs  memory_trim_page.rs  motion.rs  navigation_components.rs  navigation_state.rs  overview_page.rs  pages.rs  power_plan_control_pages.rs  presets.rs  priority_control_pages.rs  process_list_page.rs  process_policies.rs  process_refresh.rs  processor_power.rs  runtime.rs  settings_io.rs  settings_pages.rs  shared.rs  tray_state.rs  update_check.rs  widgets.rs
src/watchdog/: mod.rs
(+67 files in other folders)
