[package]
name = "powerleaf"
version = "0.1.0"
edition = "2021"
description = "Make your Windows more eco-friendly"
license = "MIT"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "5.0.1"
gpui = "0.2.2"
gpui-component = "0.5.1"
raw-window-handle = "0.6.2"
rust-i18n = "3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
