[package]
name = "winderust"
version = "0.1.0"
edition = "2021"
description = "Windows Performance & Power Manager"
license = "GPL-3.0-only"
publish = false
build = "build.rs"

[dependencies]
atomic-write-file = "0.3.0"
chrono = "0.4.44"
csv = "1.4.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
icondata_core = "0.1.0"
icondata_lu = "0.1.0"
raw-window-handle = "0.6.2"
rfd = { version = "0.17.2", default-features = false }
rust-i18n = "3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Wdk_Graphics_Direct3D",
    "Wdk_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[build-dependencies]
embed-resource = "3.0.9"
